Added booking api in gateway
