# gateway/src/main/resources/api/api.yaml
@@ -10,8 +10,6 @@ paths:
     post:
       operationId: registerUser
       tags: [ Users ]
-#      parameters:
-#        - $ref: '#/components/parameters/IdempotencyTokenHeader'
       requestBody:
         required: true
         content:
@@ -55,56 +53,6 @@ paths:
         409:
           $ref: '#/components/responses/409'
 
-  /v1/users/info/{userId}:
-    get:
-      operationId: userInfo
-      tags: [ Users ]
-      parameters:
-        - $ref: '#/components/parameters/UIDPath'
-      responses:
-        200:
-          description: UserInfoResponse
-          content:
-            application/json:
-              schema:
-                title: UserInfoResponse
-                type: object
-                additionalProperties: false
-                required:
-                  - firstName
-                  - email
-                properties:
-                  firstName:
-                    type: string
-                  email:
-                    $ref: '#/components/schemas/Email'
-                  userType:
-                    $ref: '#/components/schemas/UserType'
-        403:
-          $ref: '#/components/responses/403'
-        404:
-          $ref: '#/components/responses/404'
-#
-#  /v1/users/login:
-#    post:
-#      operationId: loginUser
-#      tags: [ Users ]
-#      parameters:
-#        - $ref: '#/components/parameters/IdempotencyTokenHeader'
-#      requestBody:
-#        required: true
-#        content:
-#          application/json:
-#            schema:
-#              $ref: '#/components/schemas/JwtLoginResponse'
-#      responses:
-#        200:
-#          $ref: '#/components/responses/200'
-#        401:
-#          $ref: '#/components/responses/401'
-#        404:
-#          $ref: '#/components/responses/404'
-
   /v1/booking/{bookId}/reservation:
     post:
       operationId: reserveBook
@@ -118,18 +66,15 @@ paths:
           schema:
             type: string
             format: uuid
-            nullable: false
       responses:
         200:
           description: Book reservation response
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/BookReservationResponse'
+                $ref: '#/components/schemas/BookReservationRequestResponse'
         401:
           $ref: '#/components/responses/401'
-        404:
-          $ref: '#/components/responses/404'
 
   /v1/booking/reservation/{reservationId}:
     get:
@@ -142,6 +87,7 @@ paths:
           required: true
           schema:
             type: string
+            format: uuid
           description: ID of the reservation request.
       responses:
         200:
@@ -323,6 +269,7 @@ components:
       name: X-Idempotency-Token
       schema:
         type: string
+        format: uuid
       required: true
 
     PageQuery:
@@ -445,53 +392,71 @@ components:
         reasonCode:
           type: string
 
+    BookReservationStatus:
+      type: string
+      enum: [ SUCCESS, FAILED, IN_PROGRESS ]
+
     BookReservationRequestResponse:
+      type: object
       discriminator:
         propertyName: status
         mapping:
           SUCCESS: '#/components/schemas/ReservationRequestSuccess'
           FAILED: '#/components/schemas/ReservationRequestFailure'
-      oneOf:
-        - $ref: '#/components/schemas/ReservationRequestSuccess'
-        - $ref: '#/components/schemas/ReservationRequestFailure'
-
-    ReservationRequestSuccess:
-      type: object
+          IN_PROGRESS: '#/components/schemas/ReservationRequestProcessing'
+      properties:
+        status:
+          $ref: '#/components/schemas/BookReservationStatus'
       required:
         - status
-        - data
-      properties:
-        status:
-          type: string
-          enum: [ SUCCESS ]
-        data:
-          type: object
+
+    ReservationRequestSuccess:
+      allOf:
+        - $ref: '#/components/schemas/BookReservationRequestResponse'
+        - type: object
           required:
-            - id
+            - reservationId
             - bookId
             - userId
-            - reservationStatus
           properties:
-            id:
+            reservationId:
               type: string
+              format: uuid
             bookId:
               type: string
+              format: uuid
             userId:
               type: string
-            reservationStatus:
-              type: string
+              format: uuid
 
     ReservationRequestFailure:
-      type: object
-      required:
-        - satus
-        - reasonCode
-      properties:
-        status:
-          type: string
-          enum: [ FAILED ]
-        reasonCode:
-          type: string
+      allOf:
+        - $ref: '#/components/schemas/BookReservationRequestResponse'
+        - type: object
+          required:
+            - reason
+          properties:
+            reason:
+              type: string
+
+    ReservationRequestProcessing:
+      allOf:
+        - $ref: '#/components/schemas/BookReservationRequestResponse'
+        - type: object
+          required:
+            - reservationId
+            - bookId
+            - userId
+          properties:
+            reservationId:
+              type: string
+              format: uuid
+            bookId:
+              type: string
+              format: uuid
+            userId:
+              type: string
+              format: uuid
 
     BookInstanceResponse:
       type: object
